--- a/lizard/src/app/login/login.page.html
+++ b/lizard/src/app/login/login.page.html
@@ -1,15 +1,17 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item>
+      <ion-label position="floating" class="labels"><ion-icon name="person-outline" ></ion-icon> Usuario</ion-label>
+      <ion-input [(ngModel)]="usuario" placeholder="example"></ion-input>
+  </ion-item>
+  <br>
+  <ion-item>
+      <ion-label position="floating" class="labels"><ion-icon name="key-outline"></ion-icon> Password</ion-label>
+      <ion-input type="password" [(ngModel)]="clave"></ion-input>
+  </ion-item>
+  <br>
+  <ion-button expand="block" (click)="logeado()" class="labels" color="dark">Ingresar</ion-button>
+  <br>
+  <a href="#" [routerLink]="['/registro']" class="labels" >Crear tu cuenta gratis</a>
+  <br>
+  <a href="#" [routerLink]="['/resetpass']" class="labels" >Recuperar contraseña</a>
 </ion-content>
-
-<br>
