--- a/lizard/src/app/home/home.page.html
+++ b/lizard/src/app/home/home.page.html
@@ -8,7 +8,7 @@
   <ion-card>
   <ion-card-header>
     <!-- Título del card -->
-    <ion-card-title>Detalles del Usuario</ion-card-title>
+    <ion-card-title>Usuario</ion-card-title>
   </ion-card-header>
 
   <ion-card-content>
@@ -16,35 +16,32 @@
       <ion-row>
         <!-- Imagen del usuario -->
         <ion-col size="6">
-          <img src="ruta_a_tu_imagen.jpg" alt="Imagen de perfil" style="width: 100%;">
+          <img src="ruta_a_tu_imagen.jpg" alt="Imagen de perfil" style="width: 90%;">
         </ion-col>
 
         <ion-col size="6">
-          <!-- Nombre del usuario -->
-          <ion-label>Nombre: Juan Pérez</ion-label>
-
           <!-- Título -->
-          <ion-label>Título: Desarrollador Web</ion-label>
+          <ion-label>Desarrollador</ion-label>
 
           <!-- Email -->
-          <ion-label>Email: 'juanexample.com'</ion-label>
+          <ion-label>juanexample.com</ion-label>
 
           <!-- Iconos -->
           <ion-row>
             <ion-col size="2">
-              <img src="icono1.png" alt="Icono 1" style="width: 100%;">
+              <img src="icono1.png" style="width: 100%;">
             </ion-col>
             <ion-col size="2">
-              <img src="icono2.png" alt="Icono 2" style="width: 100%;">
+              <img src="icono2.png" style="width: 100%;">
             </ion-col>
             <ion-col size="2">
-              <img src="icono3.png" alt="Icono 3" style="width: 100%;">
+              <img src="icono3.png" style="width: 100%;">
             </ion-col>
             <ion-col size="2">
-              <img src="icono4.png" alt="Icono 4" style="width: 100%;">
+              <img src="icono4.png" style="width: 100%;">
             </ion-col>
             <ion-col size="2">
-              <img src="icono5.png" alt="Icono 5" style="width: 100%;">
+              <img src="icono5.png" style="width: 100%;">
             </ion-col>
           </ion-row>
         </ion-col>
@@ -54,13 +51,15 @@
   </ion-card>
   <br>
   <br>
-  <ion-button expand="full">Full</ion-button>
+  <ion-button expand="full">Categoria</ion-button>
   <br>
-  <ion-button expand="full">Full</ion-button>
+  <ion-button expand="full">Top 10</ion-button>
   <br>
-  <ion-button expand="full">Full</ion-button>
+  <ion-button expand="full">Logros y titulos</ion-button>
   <br>
-  <ion-button expand="full">Full</ion-button>
+  <ion-button expand="full">Generar Tarjeta</ion-button>
+  <br>
+  <ion-button expand="full">Acerca de ...</ion-button>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
