feat: vistas login, registro, categorias, home

--- a/lizard/src/app/categorias/categorias.page.html
+++ b/lizard/src/app/categorias/categorias.page.html
@@ -1,13 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>categorias</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">categorias</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item>
+    <ion-label>
+      <h1>Categorías</h1>
+    </ion-label>
+  </ion-item>
+
+  <br>
+  <br>
+  <ion-button expand="full">Libros</ion-button>
+  <br>
+  <ion-button expand="full">Figuras</ion-button>
+  <br>
+  <ion-button expand="full">Réplicas de Armas</ion-button>
+  <br>
+  <ion-button expand="full">Cartas</ion-button>
+  <br>
+  <ion-button expand="full">Juegos</ion-button>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-button>A</ion-button>
+    <ion-button>B</ion-button>
+    <ion-button>C</ion-button>
+  </ion-toolbar>
+</ion-footer>
