--- a/lizard/src/app/home/home.page.html
+++ b/lizard/src/app/home/home.page.html
@@ -16,7 +16,7 @@
       <ion-row>
         <!-- Imagen del usuario -->
         <ion-col size="6">
-          <img src="ruta_a_tu_imagen.jpg" alt="Imagen de perfil" style="width: 90%;">
+          <img src="/lizard/src/assets/img/logo01.png" alt="Imagen de perfil" style="width: 90%;">
         </ion-col>
 
         <ion-col size="6">
@@ -29,19 +29,19 @@
           <!-- Iconos -->
           <ion-row>
             <ion-col size="2">
-              <img src="icono1.png" style="width: 100%;">
+              <img src="/lizard/src/assets/img/estrella.png" style="width: 100%;">
             </ion-col>
             <ion-col size="2">
-              <img src="icono2.png" style="width: 100%;">
+              <img src="/lizard/src/assets/img/estrella.png" style="width: 100%;">
             </ion-col>
             <ion-col size="2">
-              <img src="icono3.png" style="width: 100%;">
+              <img src="/lizard/src/assets/img/estrella.png" style="width: 100%;">
             </ion-col>
             <ion-col size="2">
-              <img src="icono4.png" style="width: 100%;">
+              <img src="/lizard/src/assets/img/estrella.png" style="width: 100%;">
             </ion-col>
             <ion-col size="2">
-              <img src="icono5.png" style="width: 100%;">
+              <img src="/lizard/src/assets/img/estrella.png" style="width: 100%;">
             </ion-col>
           </ion-row>
         </ion-col>
