--- a/lizard/src/app/registro/registro.page.html
+++ b/lizard/src/app/registro/registro.page.html
@@ -1,13 +1,45 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>registro</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">registro</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item>
+    <ion-label>
+      <h1>Registro</h1>
+    </ion-label>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="person-outline" ></ion-icon>  Usuario</ion-label>
+    <ion-input [(ngModel)]="username" placeholder="example"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="mail-outline"></ion-icon>  Correo Electrónico</ion-label>
+    <ion-input [(ngModel)]="correo" placeholder="example"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="key-outline"></ion-icon>  Password</ion-label>
+    <ion-input type="password" [(ngModel)]="clave" placeholder="*********"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="key-outline"></ion-icon>  Repetir Password</ion-label>
+    <ion-input type="password" [(ngModel)]="clave" placeholder="*********"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="image-outline"></ion-icon>  URL Foto Usuario</ion-label>
+    <ion-input type="url" [(ngModel)]="clave"></ion-input>
+  </ion-item>
+  <br>
+  <ion-button expand="full">Guardar y registrarse</ion-button>
+  
 </ion-content>
