--- a/lizard/src/app/home/home.page.html
+++ b/lizard/src/app/home/home.page.html
@@ -50,7 +50,7 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-button>A</ion-button>
+    <ion-button [routerLink]="['/login']">A</ion-button>
     <ion-button>B</ion-button>
     <ion-button>C</ion-button>
   </ion-toolbar>
