--- a/lizard/src/app/registro/registro.page.html
+++ b/lizard/src/app/registro/registro.page.html
@@ -23,23 +23,24 @@
 
   <ion-item>
     <ion-label position="floating" class="labels"><ion-icon name="key-outline"></ion-icon>  Password</ion-label>
-    <ion-input type="password" [(ngModel)]="clave" placeholder="*********"></ion-input>
+    <ion-input type="password" [(ngModel)]="clave1" placeholder="*********"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
     <ion-label position="floating" class="labels"><ion-icon name="key-outline"></ion-icon>  Repetir Password</ion-label>
-    <ion-input type="password" [(ngModel)]="clave" placeholder="*********"></ion-input>
+    <ion-input type="password" [(ngModel)]="clave2" placeholder="*********"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
     <ion-label position="floating" class="labels"><ion-icon name="image-outline"></ion-icon>  URL Foto Usuario</ion-label>
-    <ion-input type="url" [(ngModel)]="clave"></ion-input>
+    <ion-input type="url" [(ngModel)]="url"></ion-input>
   </ion-item>
   <br>
-  <ion-button expand="full">Guardar y registrarse</ion-button>
+  <ion-button expand="full" (click)="registrarUsuario()" >Guardar y registrarse</ion-button>
+  <ion-button expand="full" [routerLink]="['/login']">Cancelar</ion-button>
   
 </ion-content>
