--- a/lizard/src/app/resetpass/resetpass.page.html
+++ b/lizard/src/app/resetpass/resetpass.page.html
@@ -1,13 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>resetpass</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">resetpass</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item>
+    <ion-label>
+      <h1>Resetear Password</h1>
+    </ion-label>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="person-outline" ></ion-icon>  Usuario</ion-label>
+    <ion-input placeholder="Ingresar Usuario"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="mail-outline"></ion-icon>  Correo Electrónico</ion-label>
+    <ion-input placeholder="Ingresar Correo Electrónico"></ion-input>
+  </ion-item>
+
+  <br>
+  
+  <ion-button expand="block" (click)="abrirModal()">Validar</ion-button>
+
 </ion-content>
