feat: genera esqueleto vista top 10

--- a/lizard/src/app/top10/top10.page.html
+++ b/lizard/src/app/top10/top10.page.html
@@ -10,4 +10,25 @@
       <ion-title size="large">top10</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Username</th>
+        <th>Último Título</th>
+        <th>Cantidad de Logros</th>
+        <th>Cantidad de Títulos</th>
+        <th>Cantidad de Ítems Totales</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let usuario of listaUsuariosTop10">
+        <td>{{ usuario.username }}</td>
+        <td>{{ usuario.ultimo_titulo }}</td>
+        <td>{{ usuario.cantidad_logros }}</td>
+        <td>{{ usuario.cantidad_titulos }}</td>
+        <td>{{ usuario.cantidad_items_totales }}</td>
+      </tr>
+    </tbody>
+  </table>
 </ion-content>
