--- a/lizard/src/app/resetpass/resetpass.page.html
+++ b/lizard/src/app/resetpass/resetpass.page.html
@@ -9,18 +9,19 @@
 
   <ion-item>
     <ion-label position="floating" class="labels"><ion-icon name="person-outline" ></ion-icon>  Usuario</ion-label>
-    <ion-input placeholder="Ingresar Usuario"></ion-input>
+    <ion-input placeholder="Ingresar Usuario" [(ngModel)]="user"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
     <ion-label position="floating" class="labels"><ion-icon name="mail-outline"></ion-icon>  Correo Electrónico</ion-label>
-    <ion-input placeholder="Ingresar Correo Electrónico"></ion-input>
+    <ion-input placeholder="Ingresar Correo Electrónico" [(ngModel)]="email"></ion-input>
   </ion-item>
 
   <br>
   
-  <ion-button expand="block" (click)="abrirModal()">Validar</ion-button>
+  <ion-button expand="full" (click)="abrirModal()">Validar</ion-button>
+  <ion-button expand="full" [routerLink]="['/login']">Cancelar</ion-button>
 
 </ion-content>
