--- a/lizard/src/app/top10/top10.page.html
+++ b/lizard/src/app/top10/top10.page.html
@@ -1,16 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>top10</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">top10</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-content>
   <table>
     <thead>
       <tr>
