fix(ionic): obtener total items en top 10

--- a/lizard/src/app/top10/top10.page.html
+++ b/lizard/src/app/top10/top10.page.html
@@ -15,7 +15,7 @@
         <td>{{ usuario.ultimo_titulo }}</td>
         <td>{{ usuario.cantidad_logros }}</td>
         <td>{{ usuario.cantidad_titulos }}</td>
-        <td>{{ usuario.cantidad_items_totales }}</td>
+        <td>{{ usuario.cantidad_items }}</td>
       </tr>
     </tbody>
   </table>
