--- a/lizard/src/app/modal-crear-carta/modal-crear-carta.page.html
+++ b/lizard/src/app/modal-crear-carta/modal-crear-carta.page.html
@@ -1,13 +1,62 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>modalCrearCarta</ion-title>
+    <ion-title>
+      Agregar nueva carta a la colección
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="cerrarModal()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">modalCrearCarta</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<br>
+
+<ion-content>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Nombre de la carta</ion-label>
+    <ion-input [(ngModel)]="carta.nombre" type="text" placeholder="Nombre del libro"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="link-outline"></ion-icon> Foto de la carta</ion-label>
+    <ion-input [(ngModel)]="carta.url_foto" type="text" placeholder="www.google.com/image.png"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Tipo de carta</ion-label>
+    <ion-input [(ngModel)]="carta.tipo" type="text" placeholder="ejemplo: "></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Descripción </ion-label>
+    <ion-input [(ngModel)]="carta.descripcion" type="text" placeholder="Descripción del libro"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label class="labels"><ion-icon name="calendar-outline"></ion-icon>  Fecha adquisición</ion-label>
+    <ion-input [(ngModel)]="carta.fecha_adquisicion" type="date"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <!-- inputs de datos especificos para una carta -->
+
+  <ion-item>
+    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon> Juego </ion-label>
+    <ion-input [(ngModel)]="carta.juego" type="text" placeholder="Descripción del libro"></ion-input>
+  </ion-item>
+
+  <br>
+
+  <ion-button expand="full">Agregar carta</ion-button>
+
 </ion-content>
