--- a/lizard/src/app/home/home.page.html
+++ b/lizard/src/app/home/home.page.html
@@ -14,18 +14,12 @@
       <ion-grid>
         <ion-row>
           <ion-col size="6">
-            <!-- Imagen del usuario -->
             <img [src]="urlFoto" alt="Imagen de perfil" style="width: 90%;">
-          </ion-col>
-  
+          </ion-col>  
           <ion-col size="6">
-            <!-- Título -->
             <ion-label>{{ username }}</ion-label>
             <br>
-            <!-- Email -->
             <ion-label>{{ email }}</ion-label>
-  
-            <!-- Iconos -->
             <ion-row>
               <ion-col size="2" *ngFor="let titulo of titulos">
                 {{ titulo }}
@@ -38,19 +32,19 @@
   </ion-card>
   <br>
   <br>
-  <ion-button expand="full">Categoria</ion-button>
+  <ion-button expand="full" (click)="categoria()">Categoria</ion-button>
   <br>
-  <ion-button expand="full">Top 10</ion-button>
+  <ion-button expand="full" (click)="top10()">Top 10</ion-button>
   <br>
-  <ion-button expand="full">Logros y titulos</ion-button>
+  <ion-button expand="full" (click)="logrosytitulos()">Logros y titulos</ion-button>
   <br>
-  <ion-button expand="full">Generar Tarjeta</ion-button>
+  <ion-button expand="full" (click)="generartarjeta()">Generar Tarjeta</ion-button>
   <br>
-  <ion-button expand="full">Acerca de ...</ion-button>
+  <ion-button expand="full" [routerLink]="['/acercade']">Acerca de ...</ion-button>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-button [routerLink]="['/login']">A</ion-button>
+    <ion-button [routerLink]="['/login']">Salir</ion-button>
     <ion-button>B</ion-button>
     <ion-button>C</ion-button>
   </ion-toolbar>
