--- a/lizard/src/app/login/login.page.scss
+++ b/lizard/src/app/login/login.page.scss
@@ -6,7 +6,7 @@
     }  
 
     .background {
-        background: url('../../assets/img/fondologin.png');
+        background-image: url('../../assets/img/fondologin.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
