--- a/lizard/src/app/registro/registro.page.html
+++ b/lizard/src/app/registro/registro.page.html
@@ -9,14 +9,14 @@
 
   <ion-item>
     <ion-label position="floating" class="labels"><ion-icon name="person-outline" ></ion-icon>  Usuario</ion-label>
-    <ion-input [(ngModel)]="username" placeholder="example"></ion-input>
+    <ion-input [(ngModel)]="username" placeholder="Nombre de usuario"></ion-input>
   </ion-item>
 
   <br>
 
   <ion-item>
     <ion-label position="floating" class="labels"><ion-icon name="mail-outline"></ion-icon>  Correo Electrónico</ion-label>
-    <ion-input [(ngModel)]="correo" placeholder="example"></ion-input>
+    <ion-input [(ngModel)]="correo" placeholder="Correo Electrónico"></ion-input>
   </ion-item>
 
   <br>
