--- a/lizard/src/app/libros/libros.page.html
+++ b/lizard/src/app/libros/libros.page.html
@@ -1,13 +1,42 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>libros</ion-title>
+    <ion-title class="fuentes-cards">Libros</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<br>
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">libros</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button expand="full" [routerLink]="['/modal-crear-libro']" (click)="abrirModal()" class="labels fuentes-cards" shape="round" >Agregar (+)</ion-button>
+  <br>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+      <ion-card>
+        <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+        <ion-card-header>
+        <ion-card-title>Card Title</ion-card-title>
+        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+    
+        <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+      </ion-col>
+
+      <ion-col size="6">
+        <ion-card>
+          <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+          <ion-card-header>
+          <ion-card-title>Card Title</ion-card-title>
+          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+          </ion-card-header>
+      
+          <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+          </ion-card-content>
+        </ion-card>
+        </ion-col>
+    </ion-row> 
+  </ion-grid>
+
 </ion-content>
