--- a/lizard/src/app/login/login.page.html
+++ b/lizard/src/app/login/login.page.html
@@ -15,7 +15,7 @@
       </ion-item>
     </ion-card-content>
   <br>
-  <ion-button expand="block" (click)="logeado()" class="labels" color="dark">Ingresar</ion-button>
+  <ion-button expand="block" (click)="logeado()" class="labels fuentes-cards" color="dark">Ingresar</ion-button>
   <br>
   <a href="#" [routerLink]="['/registro']" style="margin: 0 auto; display:block; text-align: center; color: rgb(255, 255, 255); font-size: 20px;" class="labels fuentes-cards" >Crear tu cuenta gratis</a>
   <br>
