--- a/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
+++ b/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
@@ -1,56 +1,77 @@
 <ion-content [fullscreen]="true">
   <!-- Primera franja -->
-  <ion-row>
-    <ion-col size="6">
-      <!-- Aquí va la foto de perfil -->
-    </ion-col>
-    <ion-col size="6">
-      <ion-row>
-        <!-- Aquí va el username -->
-      </ion-row>
-      <ion-row>
-        <!-- Aquí va el recuadro con texto acerca del usuario -->
-      </ion-row>
-    </ion-col>
-  </ion-row>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <img alt="Imagen de perfil" style="width: 90%;">
+      </ion-col>  
+      <ion-col size="6">
+        <ion-label>Username</ion-label>
+        <br>
+        <ion-label>Correo Electrónico</ion-label>
+        <br>
+        <ion-label>Título</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid> 
 
   <!-- Segunda franja -->
-  <ion-row>
-    <ion-col size="6">
-      <ion-title>Titulos</ion-title>
-      <ion-list>
-        <ion-item>Texto 1</ion-item>
-        <ion-item>Texto 2</ion-item>
-        <ion-item>Texto 3</ion-item>
-        <!-- Agrega más items si es necesario -->
-      </ion-list>
-    </ion-col>
-    <ion-col size="6">
-      <ion-title>Logros</ion-title>
-      <ion-row>
-        <!-- Aquí van los 5 iconos de logros -->
-      </ion-row>
-    </ion-col>
-  </ion-row>
+  <ion-grid> 
+    <ion-row>
+      <ion-col size="6">
+        <ion-title>Títulos</ion-title>
+        <ion-list>
+        <ion-item>
+          <ion-label>Novato</ion-label><ion-icon name="remove-outline"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Aficionado</ion-label><ion-icon name="reorder-two-outline"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Coleccionista</ion-label><ion-icon name="reorder-three-outline"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Maestro de Colección</ion-label><ion-icon name="reorder-four-outline"></ion-icon>
+        </ion-item>
+        </ion-list>
+      </ion-col>
+
+
+      <ion-col size="6">
+        <ion-title>Logros</ion-title>
+        <ion-list>
+        <ion-item>
+          <ion-label>OK !</ion-label><ion-icon name="checkmark-done-outline"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Medio Enkokorado</ion-label><ion-icon name="heart-half-outline"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Cultivando Colecciones</ion-label><ion-icon name="nutrition-outline"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Brillamos!</ion-label><ion-icon name="sparkles-outline"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Diamante Pulido</ion-label><ion-icon name="diamond-outline"></ion-icon>
+        </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <!-- Tercera franja -->
-  <ion-row>
-    <ion-col>
-      <ion-title>Coleccion</ion-title>
-      <table>
-        <thead>
-          <tr>
-            <th>Username</th>
-            <th>Último Título</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr >
-            <td></td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
-    </ion-col>
-  </ion-row>
+  <ion-grid class="colecciones" [fixed]="true">
+    <ion-title>Colecciones</ion-title>
+    <ion-row>
+      <ion-col>1</ion-col>
+      <ion-col>2</ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid class="colecciones" [fixed]="true">
+    <ion-row>
+      <ion-col>1</ion-col>
+      <ion-col>2</ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
