feat: traspaso de variables por navigator en todas las vistas

--- a/lizard/src/app/categorias/categorias.page.html
+++ b/lizard/src/app/categorias/categorias.page.html
@@ -7,15 +7,15 @@
 
   <br>
   <br>
-  <ion-button [routerLink]="['/libros']" expand="full">Libros</ion-button>
+  <ion-button (click)="libros()" expand="full">Libros</ion-button>
   <br>
-  <ion-button [routerLink]="['/figuras']" expand="full">Figuras</ion-button>
+  <ion-button (click)="figuras()" expand="full">Figuras</ion-button>
   <br>
-  <ion-button [routerLink]="['/replicasdearmas']" expand="full">Réplicas de Armas</ion-button>
+  <ion-button (click)="replicas()" expand="full">Réplicas de Armas</ion-button>
   <br>
-  <ion-button [routerLink]="['/cartas']" expand="full">Cartas</ion-button>
+  <ion-button (click)="cartas()" expand="full">Cartas</ion-button>
   <br>
-  <ion-button [routerLink]="['/juegos']" expand="full">Juegos</ion-button>
+  <ion-button (click)="juegos()" expand="full">Juegos</ion-button>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
