--- a/lizard/src/app/coleccion/coleccion.page.html
+++ b/lizard/src/app/coleccion/coleccion.page.html
@@ -63,7 +63,7 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-button>A</ion-button>
+    <ion-button [routerLink]="['/login']">Salir</ion-button>
     <ion-button>B</ion-button>
     <ion-button>C</ion-button>
   </ion-toolbar>
