--- a/lizard/src/app/libros/libros.page.html
+++ b/lizard/src/app/libros/libros.page.html
@@ -40,3 +40,10 @@
   </ion-grid>
 
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-button [routerLink]="['/login']">Salir</ion-button>
+    <ion-button>B</ion-button>
+    <ion-button>C</ion-button>
+  </ion-toolbar>
+</ion-footer>
