--- a/lizard/src/app/replicasdearmas/replicasdearmas.page.html
+++ b/lizard/src/app/replicasdearmas/replicasdearmas.page.html
@@ -11,3 +11,10 @@
     </ion-toolbar>
   </ion-header>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-button [routerLink]="['/login']">Salir</ion-button>
+    <ion-button>B</ion-button>
+    <ion-button>C</ion-button>
+  </ion-toolbar>
+</ion-footer>
