--- a/lizard/src/app/top10/top10.page.html
+++ b/lizard/src/app/top10/top10.page.html
@@ -20,3 +20,10 @@
     </tbody>
   </table>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-button [routerLink]="['/login']">Salir</ion-button>
+    <ion-button>B</ion-button>
+    <ion-button>C</ion-button>
+  </ion-toolbar>
+</ion-footer>
