fix: modal-tarjeta

--- a/lizard/src/app/tarjeta/tarjeta.page.html
+++ b/lizard/src/app/tarjeta/tarjeta.page.html
@@ -30,7 +30,7 @@
     </ion-select>
   </ion-item>
 <br>
-  <ion-button expand="full" [routerLink]="['/modal-tarjeta']"(click)="generarTarjeta()" class="labels fuentes-cards" shape="round">Generar tarjeta</ion-button>
+  <ion-button expand="full" (click)="generarTarjeta()" class="labels fuentes-cards" shape="round">Generar tarjeta</ion-button>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
