--- a/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
+++ b/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
@@ -3,14 +3,15 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <img alt="Imagen de perfil" style="width: 90%;">
+        <img alt="Imagen de perfil" style="width: 90%;" [src]="urlFoto">
       </ion-col>  
       <ion-col size="6">
-        <ion-label>Username</ion-label>
         <br>
-        <ion-label>Correo Electrónico</ion-label>
         <br>
-        <ion-label>Título</ion-label>
+        <ion-label>{{ username }}</ion-label>
+        <br>
+        <br>
+        <ion-label>{{ email }}</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid> 
