--- a/lizard/src/app/tarjeta/tarjeta.page.html
+++ b/lizard/src/app/tarjeta/tarjeta.page.html
@@ -17,8 +17,16 @@
   </ion-item>
   <!-- seleccionar el color -->
   <ion-item>
-    <ion-label>Color principal</ion-label>
-    <input type="color" [(ngModel)]="colorTarjeta">
+    <ion-label>Color 1</ion-label>
+    <input type="color" [(ngModel)]="colorTarjeta1">
+  </ion-item>
+  <ion-item>
+    <ion-label>Color 2</ion-label>
+    <input type="color" [(ngModel)]="colorTarjeta2">
+  </ion-item>
+  <ion-item>
+    <ion-label>Color 3</ion-label>
+    <input type="color" [(ngModel)]="colorTarjeta3">
   </ion-item>
   <!-- seleccionar la fuente de letra -->
   <ion-item>
