feat: implementacion completa del backend modal tarjeta

--- a/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
+++ b/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
@@ -17,10 +17,10 @@
       <ion-col size="6">
         <br>
         <br>
-        <ion-label>{{ username }}</ion-label>
+        <ion-label [style.font-family]="fuenteTarjeta">{{ username }}</ion-label>
         <br>
         <br>
-        <ion-label>{{ email }}</ion-label>
+        <ion-label [style.font-family]="fuenteTarjeta">{{ email }}</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid> 
