--- a/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
+++ b/lizard/src/app/modal-tarjeta/modal-tarjeta.page.html
@@ -28,7 +28,7 @@
   <!-- Segunda franja -->
   <ion-grid [style.background-color]="colorFondo2"> 
     <ion-row>
-      <ion-col size="6">
+      <ion-col size="6" [style.background-color]="colorFondo2">
         <ion-title>Títulos</ion-title>
         <ion-list>
         <ion-item>
@@ -48,7 +48,6 @@
         </ion-item>
         </ion-list>
       </ion-col>
-
 
       <ion-col size="6" >
         <ion-title>Logros</ion-title>
