feat: vistas categorias listas

--- a/lizard/src/app/acercade/acercade.page.html
+++ b/lizard/src/app/acercade/acercade.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>acercade</ion-title>
+    <ion-title class="fuentes-cards"><ion-icon name="happy-outline"></ion-icon> Acerca de</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,3 +11,19 @@
     </ion-toolbar>
   </ion-header>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar mode="ios" class="botones-footer">
+    <div style="text-align: center;">
+    <ion-button [routerLink]="['/login']">
+      <ion-icon name="exit-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/home']">
+      <ion-icon name="home-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/tarjeta']">
+      <ion-icon name="id-card-outline"></ion-icon>
+    </ion-button>
+  </div>
+  </ion-toolbar>
+</ion-footer>
