--- a/lizard/src/app/libros/libros.page.html
+++ b/lizard/src/app/libros/libros.page.html
@@ -1,49 +1,47 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title class="fuentes-cards">Libros</ion-title>
+    <ion-title class="fuentes-cards" ><ion-icon name="bookmark-outline"></ion-icon> Libros</ion-title>
   </ion-toolbar>
 </ion-header>
 <br>
 <ion-content [fullscreen]="true">
-  <ion-button expand="full" [routerLink]="['/modal-crear-libro']" (click)="abrirModal()" class="labels fuentes-cards" shape="round" >Agregar (+)</ion-button>
+  <ion-button expand="full" [routerLink]="['/modal-crear-libro']" (click)="abrirModal()" class="labels fuentes-cards boton-agregar" shape="round" >Agregar (+)</ion-button>
   <br>
   <ion-grid>
     <ion-row>
       <ion-col size="6">
       <ion-card>
-        <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+        <img src="../../assets/img/LIBROICONO.png"/>
         <ion-card-header>
-        <ion-card-title>Card Title</ion-card-title>
-        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title class="labels fuentes-cards">Título Libro</ion-card-title>
+        <ion-card-subtitle>Autor Libro</ion-card-subtitle>
         </ion-card-header>
     
         <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
+        Datos del libro
         </ion-card-content>
       </ion-card>
       </ion-col>
 
       <ion-col size="6">
-        <ion-card>
-          <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
-          <ion-card-header>
-          <ion-card-title>Card Title</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-          </ion-card-header>
-      
-          <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
-          </ion-card-content>
-        </ion-card>
-        </ion-col>
+        <!--Si se quiere usar otra card, copiar la de arriba-->
+      </ion-col>
     </ion-row> 
   </ion-grid>
 
 </ion-content>
 <ion-footer>
-  <ion-toolbar>
-    <ion-button [routerLink]="['/login']">Salir</ion-button>
-    <ion-button>B</ion-button>
-    <ion-button>C</ion-button>
+  <ion-toolbar mode="ios" class="botones-footer">
+    <div style="text-align: center;">
+    <ion-button [routerLink]="['/login']">
+      <ion-icon name="exit-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/home']">
+      <ion-icon name="home-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/tarjeta']">
+      <ion-icon name="id-card-outline"></ion-icon>
+    </ion-button>
+  </div>
   </ion-toolbar>
 </ion-footer>
